<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".DisplayOPtions">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headline_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/headline_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/account_details_text"
            android:textSize="20sp"
            android:layout_marginLeft="12dp"
            android:textColor="@color/black"
            android:fontFamily="@font/abel"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headline_layout"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/name_view"
            android:fontFamily="@font/abel"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/name_text"
            app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="@id/name_layout"
            app:layout_constraintBottom_toBottomOf="@id/name_layout">

        </TextView>


        <TextView
            android:id="@+id/name_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_view"
            android:fontFamily="@font/abel"
            android:gravity="right"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/name_view"
           app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/name_layout"
            android:padding="5dp">
        </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/account_type_layout"
        app:layout_constraintTop_toBottomOf="@id/name_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/account_type_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/abel"
            android:textStyle="bold"
android:layout_marginLeft="20dp"
            android:padding="5dp"
            android:textColor="@color/black"
            android:text="@string/account_type"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/account_type_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/account_type_layout"
            app:layout_constraintBottom_toBottomOf="@id/account_type_layout">

        </TextView>


        <TextView
            android:id="@+id/account_type_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
           android:padding="5dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/custom_view"

            android:fontFamily="@font/abel"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/account_type_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/account_type_layout">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_option_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_type_layout"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/choose_option_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/abel"
            android:textStyle="bold"
            android:text="Choose one option to continue"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/user_option_layout">

        </TextView>

        <Button
            android:id="@+id/deposit_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_rectangle_button"
            android:text="@string/deposit_button"
            android:fontFamily="@font/abel"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toStartOf="@id/check_balance_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choose_option_view">

        </Button>

        <Button
            android:id="@+id/withdraw_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_rectangle_button"
            android:text="@string/withdraw_button"
            android:fontFamily="@font/abel"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@id/deposit_button"
            app:layout_constraintStart_toStartOf="@id/deposit_button"
            app:layout_constraintTop_toBottomOf="@id/deposit_button">

        </Button>

        <Button
            android:id="@+id/check_balance_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_rectangle_button"
            android:text="@string/balance_enquiry_button"
            app:backgroundTint="@null"
            android:fontFamily="@font/abel"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/deposit_button"
            app:layout_constraintTop_toBottomOf="@id/choose_option_view">

        </Button>

        <Button
            android:id="@+id/exit_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_rectangle_button"
            android:text="@string/exit_button"
            app:backgroundTint="@null"
            android:fontFamily="@font/abel"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/check_balance_button"
            app:layout_constraintStart_toStartOf="@id/check_balance_button"
            app:layout_constraintTop_toBottomOf="@id/check_balance_button">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>