<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/sky_blue50"

    tools:context=".Transactions">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/deposit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/deposit_amt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/enter_amount_to_deposit"
            android:textSize="18sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/deposit_amt_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <EditText
            android:id="@+id/deposit_amt_text"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:inputType="number"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:background="@color/blue_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/deposit_amt_view"
            app:layout_constraintTop_toTopOf="@id/deposit_layout">

        </EditText>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_rectangle_button"
            android:text="@string/submit_button_transaction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deposit_amt_view">

        </Button>

        <TextView
            android:id="@+id/credit_msg_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="18sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submit_button">

        </TextView>

        <TextView
            android:id="@+id/deposit_balance_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/deposit_balance_view"
            android:textSize="18sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/deposit_balance_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/credit_msg_view">

        </TextView>

        <TextView
            android:id="@+id/deposit_balance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/deposit_balance_view"
            app:layout_constraintTop_toBottomOf="@id/credit_msg_view">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/withdraw_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/withdraw_amt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/withdraw_amount_view"
            android:textSize="18sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/withdraw_amt_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <EditText
            android:id="@+id/withdraw_amt_text"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:background="@color/blue_100"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/withdraw_amt_view"
            app:layout_constraintTop_toTopOf="parent">

        </EditText>

        <Button
            android:id="@+id/withdraw_submit_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_rectangle_button"
            android:text="@string/submit_button_transaction"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/withdraw_amt_view">

        </Button>

        <TextView
            android:id="@+id/debit_msg_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="18sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/withdraw_submit_button">
        </TextView>

        <TextView
            android:id="@+id/withdraw_balance_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/available_balance_text"
            android:textSize="18sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/withdraw_balance_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/debit_msg_view">

        </TextView>

        <TextView
            android:id="@+id/withdraw_balance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/withdraw_amt_view"
            app:layout_constraintTop_toBottomOf="@id/debit_msg_view">

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/thanks_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deposit_layout">

        <TextView
            android:id="@+id/thanks_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank_you_view"
            android:textSize="18sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/thanks_layout">

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>